// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPI-Writer writing params.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/yay/{id}": {
			"get": {
				"parameters": [
					{
						"in": "path",
						"name": "id",
						"required": true,
						"schema": {
							"type": "string"
						}
					}
				],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					},
					"422": {
						"description": "422",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {
										"type": {
											"type": "string"
										},
										"on": {
											"type": "string"
										},
										"summary": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"message": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"found": {
											"nullable": true
										},
										"property": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"expected": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										}
									}
								}
							}
						}
					}
				}
			}
		},
		"/whelp/{id}/{name}": {
			"get": {
				"parameters": [
					{
						"in": "path",
						"name": "id",
						"required": true,
						"schema": {
							"type": "string"
						}
					},
					{
						"in": "path",
						"name": "name",
						"required": true,
						"schema": {
							"type": "string"
						}
					}
				],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					},
					"422": {
						"description": "422",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {
										"type": {
											"type": "string"
										},
										"on": {
											"type": "string"
										},
										"summary": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"message": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"found": {
											"nullable": true
										},
										"property": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"expected": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										}
									}
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing basic.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing plugin.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing prefix-group.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/prefix/prefix-route": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {}
					}
				}
			}
		},
		"/prefix/prefix-group/inner-group/inner-route": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing listen-object-shorthand.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing response.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {}
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing void.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing model-condition.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"post": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					},
					"422": {
						"description": "422",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {
										"type": {
											"type": "string"
										},
										"on": {
											"type": "string"
										},
										"summary": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"message": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"found": {
											"nullable": true
										},
										"property": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"expected": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										}
									}
								}
							}
						}
					}
				},
				"requestBody": {
					"content": {
						"application/json": {
							"schema": {
								"type": "object",
								"properties": {
									"name": {
										"type": "string"
									},
									"age": {
										"type": "number"
									}
								}
							}
						},
						"text/plain": {
							"schema": {
								"type": "string"
							}
						}
					},
					"required": true
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing prefix.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/prefix": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing listen-port.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing multipart.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/upload": {
			"post": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {}
					},
					"422": {
						"description": "422",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {
										"type": {
											"type": "string"
										},
										"on": {
											"type": "string"
										},
										"summary": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"message": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"found": {
											"nullable": true
										},
										"property": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"expected": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										}
									}
								}
							}
						}
					}
				},
				"requestBody": {
					"content": {
						"multipart/form-data": {
							"schema": {
								"type": "object",
								"properties": {
									"text": {
										"type": "string"
									},
									"file": {
										"type": "string",
										"format": "binary"
									}
								}
							}
						}
					},
					"required": true
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing route-intersaction.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"post": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "number"
								}
							}
						}
					}
				},
				"requestBody": {
					"content": {},
					"required": true
				}
			},
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing ws.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing model.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"post": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					},
					"422": {
						"description": "422",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {
										"type": {
											"type": "string"
										},
										"on": {
											"type": "string"
										},
										"summary": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"message": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"found": {
											"nullable": true
										},
										"property": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"expected": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										}
									}
								}
							}
						}
					}
				},
				"requestBody": {
					"content": {
						"application/json": {
							"schema": {
								"type": "object",
								"properties": {
									"name": {
										"type": "string"
									},
									"age": {
										"type": "number"
									}
								}
							}
						}
					},
					"required": true
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing schema.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/{param}": {
			"get": {
				"parameters": [
					{
						"in": "path",
						"name": "param",
						"required": true,
						"schema": {
							"oneOf": [
								{
									"type": "string"
								},
								{
									"type": "number"
								}
							]
						}
					},
					{
						"in": "query",
						"name": "query",
						"schema": {
							"type": "string"
						}
					},
					{
						"in": "header",
						"name": "head",
						"schema": {
							"type": "string"
						}
					}
				],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"oneOf": [
										{
											"type": "string"
										},
										{
											"type": "number"
										}
									]
								}
							}
						}
					},
					"400": {
						"description": "400",
						"content": {
							"application/json": {
								"schema": {
									"type": "array",
									"items": {
										"type": "string"
									}
								}
							}
						}
					},
					"422": {
						"description": "422",
						"content": {
							"application/json": {
								"schema": {
									"type": "object",
									"properties": {
										"type": {
											"type": "string"
										},
										"on": {
											"type": "string"
										},
										"summary": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"message": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"found": {
											"nullable": true
										},
										"property": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										},
										"expected": {
											"oneOf": [
												{
													"nullable": true
												},
												{
													"type": "string"
												}
											]
										}
									}
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;

exports[`OpenAPI-Writer writing listen-object.ts should match snapshot 1`] = `
"{
	"openapi": "3.1.0",
	"info": {
		"title": "Elysia Documentation",
		"description": "Development documentation",
		"version": "0.0.0"
	},
	"paths": {
		"/": {
			"get": {
				"parameters": [],
				"responses": {
					"200": {
						"description": "200",
						"content": {
							"text/plain": {
								"schema": {
									"type": "string"
								}
							}
						}
					}
				}
			}
		}
	}
}"
`;
